tests/rosetta/out/C/a+b.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:34Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:34Z
#include <stdio.h>
#include <stdlib.h>

static char *_input() {
  char buf[1024];
  if (!fgets(buf, sizeof(buf), stdin))
    return strdup("");
  size_t len = strlen(buf);
  if (len > 0 && buf[len - 1] == '\n')
    buf[len - 1] = '\0';
  return strdup(buf);
}
int mochi_main() {
  int a = _int(_input());
  int b = _int(_input());
  printf("%d\n", a + b);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
